SERVER-61494 Fix "mongod --shutdown" to check size of "mongod.lock" instead of existence

Signed-off-by: Sara Golemon <sara.golemon@mongodb.com>

Closes: https://github.com/mongodb/mongo/pull/1428